Identify what CR4 is used for, and why it is dangerous.

--- a/assignment2_s1010747_s4549775.md
+++ b/assignment2_s1010747_s4549775.md
@@ -10,6 +10,17 @@ geometry: margin=5em
 
 # 1
 ## a
+The 8 registers `CR0-CR7` are so called "control registers". They can be used to alter and control the processor's behaviour. `CR1`, as well as `CR5-CR7` are reserved, and trying to write them will result in an exception. By setting specific bits in the remaining registers `CR0`, as well as `CR2-CR4`, we can control the corresponding processor settings.
+
+Register `CR4` is
+
+> used in protected mode to control operations such as virtual-8086 support, enabling I/O breakpoints, page size extension and machine check exceptions. [^1]
+
+While it is probably generally a good idea to not let random user space programs alter processor settings, `CR4` specifically may be dangerous because it is involved in virtualization and paging, which could lead to accessing other process' memory. Especially bit 7 looks very dangerous, as it enables global page translation. [^2]
+
+[^1]: <https://en.wikipedia.org/wiki/Control_register#CR4>
+[^2]: <http://developer.amd.com/wordpress/media/2012/10/24593_APM_v2.pdf>
+
 ## b
 ## c
 ## d
