--- a/assignment2_s1010747_s4549775.md
+++ b/assignment2_s1010747_s4549775.md
@@ -22,6 +22,8 @@ While it is probably generally a good idea to not let random user space programs
 [^2]: <http://developer.amd.com/wordpress/media/2012/10/24593_APM_v2.pdf>
 
 ## b
+The segmentation fault occurs at the assembly instruction `mov %cr4, %rax`. This instruction tries to put the content of register `CR4` into register `RAX`.
+
 ## c
 ## d
 
