--- a/assignment2_s1010747_s4549775.md
+++ b/assignment2_s1010747_s4549775.md
@@ -25,6 +25,8 @@ While it is probably generally a good idea to not let random user space programs
 The segmentation fault occurs at the assembly instruction `mov %cr4, %rax`. This instruction tries to put the content of register `CR4` into register `RAX`.
 
 ## c
+We were able to reproduce the hello world kernel module, and could see its output with `dmesg`.
+
 ## d
 
 # 2
