--- a/assignment2_s1010747_s4549775.md
+++ b/assignment2_s1010747_s4549775.md
@@ -28,6 +28,20 @@ The segmentation fault occurs at the assembly instruction `mov %cr4, %rax`. This
 We were able to reproduce the hello world kernel module, and could see its output with `dmesg`.
 
 ## d
+The kernel module runs in kernel space (ring 0), so we can access register `CR4` without a problem.
+Putting the exact same assembly instruction in the kernel module did not result in a segmentation fault. We could successfully read and print register `CR4`.
+
+To compile and use the module run
+
+```
+cd kernel_module
+make
+insmod kernel_module.ko
+rmmod kernel_module.ko
+dmesg | tail -2
+```
+
+You should see two messages from our module. One message is containing the value of register `CR4`, the other message informs us that the module was unloaded again.
 
 # 2
 ## a
