Document how to disable ASLR.

--- a/assignment2_s1010747_s4549775.md
+++ b/assignment2_s1010747_s4549775.md
@@ -45,6 +45,8 @@ You should see two messages from our module. One message is containing the value
 
 # 2
 ## a
+You can disable ASLR via `make disable-aslr`.
+
 ## b
 ## c
 ## d
