--- a/assignment2_s1010747_s4549775.md
+++ b/assignment2_s1010747_s4549775.md
@@ -52,7 +52,7 @@ cd rop
 make
 ```
 
-You can disable ASLR via `make disable-aslr`.
+Next we need to disable ASLR, this can be done via `make disable-aslr`.
 
 ## b
 ## c
