Document Libc autodetection.

--- a/assignment2_s1010747_s4549775.md
+++ b/assignment2_s1010747_s4549775.md
@@ -54,6 +54,8 @@ make
 
 Next we need to disable ASLR, this can be done via `make disable-aslr`.
 
+The exploit script `exploit.sh` tries to automatically find the path of Libc, but if this does not work, you may have to manually set it like this `libc_path=/path/to/libc ./exploit.sh …`.
+
 ## b
 ## c
 ## d
