Document debug mode.

--- a/assignment2_s1010747_s4549775.md
+++ b/assignment2_s1010747_s4549775.md
@@ -56,6 +56,8 @@ Next we need to disable ASLR, this can be done via `make disable-aslr`.
 
 The exploit script `exploit.sh` tries to automatically find the path of Libc, but if this does not work, you may have to manually set it like this `libc_path=/path/to/libc ./exploit.sh …`.
 
+To enable debug output, run the script like this `DEBUG=1 ./exploit.sh …`.
+
 ## b
 ## c
 ## d
