--- a/assignment2_s1010747_s4549775.md
+++ b/assignment2_s1010747_s4549775.md
@@ -58,10 +58,13 @@ The exploit script `exploit.sh` tries to automatically find the path of Libc, bu
 
 To enable debug output, run the script like this `DEBUG=1 ./exploit.sh …`.
 
+As `ropper` is used to find the gadget, so you need to have this installed and on your path.
+
 The script has the following exit codes:
 
 * **1:** The script was called with the wrong number of arguments.
 * **2:** The first argument is not an executable file.
+* **3:** `ropper` is not on your path.
 
 The exploit script gathers the name buffer's address, the base address of Libc, the offsets of the `system` and `exit` functions, and the offset of the gadget. Then it calculates the actual addresses of the gadget, and both functions using the Libc base address. Next it assembles the payload from this data as follows:
 
