Explain how to solve the buffer size problem.

--- a/assignment2_s1010747_s4549775.md
+++ b/assignment2_s1010747_s4549775.md
@@ -86,5 +86,7 @@ The address of the `exit` function was added, so that when returning from the sh
 After running the exploit with `[DEBUG=1] [libc_path=…] ./exploit vulnerable`, you need to press enter twice, then you have a shell. You can verify this by trying to execute `ls`, or something similar.
 
 ## b
-## c
-## d
+## c + d
+By examining Libc with `strings /usr/lib/libc.so.6 -tx | grep /bin/sh` we find that Libc itself contains the string "/bin/sh".
+
+We can grab the offset of this string in Libc, and calculate the address of it with the Libc base address. Then we can use this string instead of writing it to the name buffer, so the buffer's size is irrelevant. We just need to know how big it is to use the correct padding. This works for both the 64 byte, as well as the 4 byte version of the program.
