Document how to attack the 4 byte buffer version.

--- a/assignment2_s1010747_s4549775.md
+++ b/assignment2_s1010747_s4549775.md
@@ -90,3 +90,12 @@ After running the exploit with `[DEBUG=1] [libc_path=…] ./exploit vulnerable`,
 By examining Libc with `strings /usr/lib/libc.so.6 -tx | grep /bin/sh` we find that Libc itself contains the string "/bin/sh".
 
 We can grab the offset of this string in Libc, and calculate the address of it with the Libc base address. Then we can use this string instead of writing it to the name buffer, so the buffer's size is irrelevant. We just need to know how big it is to use the correct padding. This works for both the 64 byte, as well as the 4 byte version of the program.
+
+You can test it like this
+
+```
+make
+[DEBUG=1] [libc_path=…] small_buffer=1 ./exploit vulnerable_small_buffer
+```
+
+After again pressing enter twice, you should have a shell.
