--- a/assignment2_s1010747_s4549775.md
+++ b/assignment2_s1010747_s4549775.md
@@ -86,6 +86,37 @@ The address of the `exit` function was added, so that when returning from the sh
 After running the exploit with `[DEBUG=1] [libc_path=…] ./exploit vulnerable`, you need to press enter twice, then you have a shell. You can verify this by trying to execute `ls`, or something similar.
 
 ## b
+It does actually work. Here is the patch:
+
+```
+diff --git a/rop/exploit.sh b/rop/exploit.sh
+index 1fbb919..ee2fbc7 100755
+--- a/rop/exploit.sh
++++ b/rop/exploit.sh
+@@ -34,7 +34,7 @@ libc_exit_address=$(print_pointer $((0x$libc_base_address + 0x$libc_exit_offset)
+ gadget_address=$(print_pointer $((0x$libc_base_address + 0x$gadget_offset)))
+ command_address=$(print_pointer $((0x$libc_base_address + 0x$command_offset)))
+
+-[[ $small_buffer ]] && padding=24 # = (4 + 8) * 2
++[[ $small_buffer ]] && padding=144 # = (64 + 8) * 2
+ [[ $small_buffer ]] || padding=$(((256 - ${#command} + 8) * 2))
+
+ if [[ $DEBUG ]]; then
+diff --git a/rop/vulnerable.c b/rop/vulnerable.c
+index 2824ccd..d14c97e 100644
+--- a/rop/vulnerable.c
++++ b/rop/vulnerable.c
+@@ -1,7 +1,7 @@
+ #include <stdio.h>
+
+ int main(void) {
+-       char name[256];
++       char name[64];
+        printf("%p\n", name);
+        puts("What’s your name?");
+        gets(name);
+```
+
 ## c + d
 By examining Libc with `strings /usr/lib/libc.so.6 -tx | grep /bin/sh` we find that Libc itself contains the string "/bin/sh".
 
