--- a/assignment2_s1010747_s4549775.md
+++ b/assignment2_s1010747_s4549775.md
@@ -60,6 +60,8 @@ To enable debug output, run the script like this `DEBUG=1 ./exploit.sh …`.
 
 As `ropper` is used to find the gadget, so you need to have this installed and on your path. To find gadget, `ropper` relies on `python-keystone`, so you should have that available as well.
 
+If you do not want to install these dependencies, you can give the gadget_offset manually like this `gadget_offset=c7fe02 ./exploit.sh …`.
+
 The script has the following exit codes:
 
 * **1:** The script was called with the wrong number of arguments.
