--- a/assignment2_s1010747_s4549775.md
+++ b/assignment2_s1010747_s4549775.md
@@ -58,7 +58,7 @@ The exploit script `exploit.sh` tries to automatically find the path of Libc, bu
 
 To enable debug output, run the script like this `DEBUG=1 ./exploit.sh …`.
 
-As `ropper` is used to find the gadget, so you need to have this installed and on your path. To find gadget, `ropper` relies on `python-keystone`, so you should have that available as well.
+`ropper` is used to find the gadget, so you need to have this installed and on your path. To find gadget, `ropper` relies on `python-keystone`, so you should have that available as well.
 
 If you do not want to install these dependencies, you can give the gadget_offset manually like this `gadget_offset=c7fe02 ./exploit.sh …`.
 
