--- a/assignment2_s1010747_s4549775.md
+++ b/assignment2_s1010747_s4549775.md
@@ -119,6 +119,8 @@ index 2824ccd..d14c97e 100644
         gets(name);
 ```
 
+As you can see the only thing that needs to be changed is the padding.
+
 ## c + d
 By examining Libc with `strings /usr/lib/libc.so.6 -tx | grep /bin/sh` we find that Libc itself contains the string "/bin/sh".
 
