--- a/assignment2_s1010747_s4549775.md
+++ b/assignment2_s1010747_s4549775.md
@@ -66,7 +66,7 @@ The script has the following exit codes:
 
 * **1:** The script was called with the wrong number of arguments.
 * **2:** The first argument is not an executable file.
-* **3:** `ropper` is not on your path.
+* **3:** `ropper` is not on your path, and you did not give a gadget offset manually.
 
 The exploit script gathers the name buffer's address, the base address of Libc, the offsets of the `system` and `exit` functions, and the offset of the gadget. Then it calculates the actual addresses of the gadget, and both functions using the Libc base address. Next it assembles the payload from this data as follows:
 
